designed using bootstrap

--- a/src/contact.html
+++ b/src/contact.html
@@ -4,59 +4,125 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
+<body class="bg-dark text-white">
     <header>
-        <nav>
-            <h2 class="logo">Naol's <span>Portfolio</span></h2>
-            <ul>
-                <li> <a href="home.html" target="_blank">Home</a></li>
-                <li><a href="about.html" target="_blank">About</a></li>
-                <li><a href="hobbies.html" target="_blank">Hobbies</a></li>
-                <li><a href="contact.html" target="_blank">Contact</a></li>
-                <li><a href="cv.html" target="_blank">CV</a></li>
-            </ul>
-    </nav>
-</header>
-    <section id="contact">
-        <h2>Contact Me</h2>
-        <p>Feel free to reach out to me using the form below or through the provided contact information.</p>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Navbar</h5>
+                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link" href="home.html" target="_blank">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html" target="_blank">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="hobbies.html" target="_blank">Hobbies</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html" target="_blank">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="cv.html" target="_blank">CV</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNav" aria-labelledby="offcanvasNavLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasNavLabel">Menu</h5>
+              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="nav flex-column">
+                <li class="nav-item">
+                  <a class="nav-link btn btn-outline-light" href="home.html" target="_blank">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link btn btn-outline-light" href="about.html" target="_blank">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link btn btn-outline-light" href="hobbies.html" target="_blank">Hobbies</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link btn btn-outline-light" href="contact.html" target="_blank">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link btn btn-outline-light" href="cv.html" target="_blank">CV</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+    </header>
+<section id="contact" class="container">
+    <h2>Contact <span class="text-danger">Me</span></h2>
+    <p>Feel free to reach out to me using the form below or through the provided contact information.</p>
 
-        <form action="process_form.php" method="post">
-            <label for="name" >Your Name:</label>
-            <input type="text" id="name" name="name" required>
+    <form action="process_form.php" method="post" class="row g-3">
+        <div class="col-12">
+            <label for="name" class="form-label">Your Name:</label>
+            <input type="text" class="form-control" id="name" name="name" required>
+        </div>
 
-            <label for="email">Your Email:</label>
-            <input type="email" id="email" name="email" required>
+        <div class="col-12">
+            <label for="email" class="form-label">Your Email:</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+        </div>
 
-            <label for="message">Your Message:</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
+        <div class="col-12">
+            <label for="message" class="form-label">Your Message:</label>
+            <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+        </div>
 
-            <button type="submit">Submit</button>
-        </form>
-    </section>
-    <section id="contact-info">
-        <h2>Contact Information</h2>
-        <p>You can also reach me through the following channels:</p>
-        <p>Email: <a href="mailto:naolgezahegne@gmail.com">Email</a></p>
-        <p>Twitter: <a href="https://x.com/N1sup" target="_blank">Twitter</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/" target="_blank">LinkedIn</a></p>
-    </section>
-    <figure>
-        <img src="images/prof.jpg" alt="my twitter profile">
-    </figure>
-<button onclick="window.location.href='hobbies.html'">previous</button>
-<button onclick="window.location.href='cv.html'">Next</button>
-<footer>
-    <nav>
-        <ul>
-            <li><a href="https://x.com/N1sup">my twitter</a></li>
-            <li><a href="https://linkedin.com/in/naol-gezahegne">my linkedin</a></li>
-            <li><a href="mailto:naolgezahegne@gmail.com">email me</a></li>
-        </ul>
-    </nav>
-    <p>&copy; 2023 Naol. All rights reserved.</p>
-</footer>
-    
+        <div class="col-12">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </form>
+</section>
+
+<section id="contact-info" class="container">
+    <h2 class="mt-3">Contact <span class="text-danger">Information</span></h2>
+    <p>You can also reach me through the following channels:</p>
+    <p>Email: <a href="mailto:naolgezahegne@gmail.com" class="text-decoration-none text-primary">Email Me </a></p>
+    <p>Twitter: <a href="https://x.com/N1sup" target="_blank" class="text-decoration-none text-primary">My Twitter</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/" target="_blank" class="text-decoration-none text-primary">My LinkedIn</a></p>
+</section>
+<figure class="d-flex justify-content-center">
+    <img class="rounded-circle w-25 h-25" src="images/prof.jpg" alt="my twitter profile">
+</figure>
+
+    <div class="text-end mb-3">
+        <button onclick="window.location.href='hobbies.html'" class="btn btn-primary">Previous</button>
+        <button onclick="window.location.href='cv.html'" class="btn btn-primary mx-5">Next</button>
+    </div>
+    <footer class="footer mt-auto py-3 bg-gradient">
+        <div class="container">
+            <div class="row">
+                <div class="col text-white text-center">
+                    <nav class="nav justify-content-center">
+                        <a class="nav-link" href="https://x.com/N1sup">Twitter</a>
+                        <a class="nav-link" href="https://linkedin.com/in/naol-gezahegne">LinkedIn</a>
+                        <a class="nav-link" href="mailto:naolgezahegne@gmail.com">Email</a>
+                    </nav>
+                </div>
+                <div class="col-12 text-center">
+                    <p>&copy; 2023 Naol. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>  
 </body>
 </html>
