--- a/src/about.html
+++ b/src/about.html
@@ -4,93 +4,153 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Naol</title>
-    <link rel="stylesheet" href="style.css">
-<body>
-   <header>
-    <nav>
-        <h2 class="logo">Naol's <span>Portfolio</span></h2>
-        <ul>
-            <li> <a href="home.html" target="_blank">Home</a></li>
-            <li><a href="about.html" target="_blank">About</a></li>
-            <li><a href="hobbies.html" target="_blank">Hobbies</a></li>
-            <li><a href="contact.html" target="_blank">Contact</a></li>
-            <li><a href="cv.html" target="_blank">CV</a></li>
-        </ul>
-    </nav>
-</header>
-    <main class="main">
-        <h2 id="abt">About <span>Me</span></h2>
-        <p id="intro">I am currently a <em>third-year</em> student pursuing a degree in <strong>software engineering</strong> at <cite>Addis Ababa Institute of Technology (AAiT)</cite>. Coding is a passion that resonates with me, and I thoroughly enjoy delving into the intricacies of software development. As a dedicated and hardworking student, I consistently strive to give my best in all academic endeavors. If you wish to learn more about me, explore the array of skills I've cultivated, the inspirations that drive my work, and the places I aspire to visit are detailed in the following sections </p>
-</main>
-<article>
-    <h3 id="skills">Skills</h3>
-    <p>Throughout the years, I have cultivated a myriad of skills that play a pivotal role in both my daily existence and academic pursuits. Presented below is an inventory of the skills I have nurtured and refined over time.</p>
-    <ul>
-        <li>Problem solving</li>
-        <li>Coding</li>
-        <li>Socialising</li>
-        <li>Playing sports</li>
-        <li>Time management</li>
-    </ul>
-
-    <h3 id="inspirations">Inspirations</h3>
-    <p>My inspirations are diverse and multifaceted, drawn from various aspects of life and experiences. I find inspiration in the relentless pursuit of knowledge, a trait I admire in both historical figures and contemporary thought leaders. The resilience of individuals who have overcome adversity fuels my motivation, reminding me of the power of determination and courage. Creativity, whether expressed through art, literature, or technological innovation, captivates my imagination and serves as a wellspring of inspiration. Additionally, the supportive communities around me, including family, friends, and mentors, contribute profoundly to my aspirations. Ultimately, my inspirations form a dynamic tapestry, woven with the threads of passion, perseverance, and a continuous quest for personal and intellectual growth.</p>
-    <h3 id="places">Places to visit</h3>
-    <p>I want to visit a several places all over the world. So far, I have only visited few places that grabbed my attention. Although there are many places in and out of the country that I'd love to visit. Bale Mountains National Park is the place I'd like to visit the most. The prospect of exploring the pristine landscapes of the Harenna Forest and the expansive Sanetti Plateau is an enticing adventure. Beyond the scenic vistas, the park offers a unique opportunity to witness the endangered Ethiopian wolf in its native environment, adding an element of rarity and ecological significance to the experience. I have summarised list of places I want to visit in the following table.</p>
-</article>
-    <table>
-        <thead>
-            <tr>
-                <th>Place</th>
-                <th>Location</th>
-                <th>Description</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Bale Mountains National Park</td>
-                <td>Southeastern Ethiopia</td>
-                <td>Bale Mountains National Park in Ethiopia features stunning landscapes, including the Harenna Forest and Sanetti Plateau. Ideal for trekking and wildlife enthusiasts, it offers a rare chance to witness the endangered Ethiopian wolf in its natural habitat.</td>
-            </tr>
-            <tr>
-                <td>Lalibela Rock-Hewn Churches</td>
-                <td>Northern Ethiopia</td>
-                <td>Lalibela is known for its 11 medieval churches carved out of solid rock, each with unique architectural features and religious significance. A UNESCO World Heritage Site.</td>
-            </tr>
-            <tr>
-                <td>Simien Mountains</td>
-                <td>Northern Ethiopia</td>
-                <td>A stunning mountain range with deep valleys, high plateaus, and unique wildlife, including the Ethiopian wolf and Walia ibex. Popular for trekking and breathtaking landscapes.</td>
-            </tr>
-            <tr>
-                <td>Halala Kela Resort</td>
-                <td>Southwestern Ethiopia</td>
-                <td>Halala Kela is a luxury resort located in the southwestern Ethiopia, near the lake created by the Gilgel Gibe III dam</td>
-            </tr>
-    </table>
-    <p>here's a short video of the Bale Mountains National Park</p>
-    <video src="images/balePark.mp4" controls>Bale National</video>
-
-<aside>
-    <nav>
-        <ul>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#inspirations">Inspirations</a></li>
-            <li><a href="#places">Places to visit</a></li>
-        </ul>
-    </nav>
-</aside>
-<button onclick="window.location.href='index.html'">previous</button>
-<button onclick="window.location.href='hobbies.html'">Next</button>
-<footer>
-    <nav>
-        <ul>
-            <li><a href="https://x.com/N1sup">twitter</a></li>
-            <li><a href="https://linkedin.com/in/naol-gezahegne ">linkedin</a></li>
-            <li><a href="mailto:naolgezahegne@gmail.com">email</a></li>
-        </ul>
-    </nav>
-    <p>&copy; 2023 Naol. All rights reserved.</p>
-</footer>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/bootstrap.bundle.min.js"></script>
+</head>
+<body class="bg-dark text-white container-fluid">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Navbar</h5>
+                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link" href="home.html" target="_blank">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html" target="_blank">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="hobbies.html" target="_blank">Hobbies</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact.html" target="_blank">Contact</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="cv.html" target="_blank">CV</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+          <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNav" aria-labelledby="offcanvasNavLabel">
+            <div class="offcanvas-header">
+              <h5 class="offcanvas-title" id="offcanvasNavLabel">Menu</h5>
+              <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+              <ul class="nav flex-column">
+                <li class="nav-item">
+                  <a class="nav-link btn btn-outline-light" href="home.html" target="_blank">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link btn btn-outline-light" href="about.html" target="_blank">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link btn btn-outline-light" href="hobbies.html" target="_blank">Hobbies</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link btn btn-outline-light" href="contact.html" target="_blank">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link btn btn-outline-light" href="cv.html" target="_blank">CV</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+    </header>
+    <div class="container">
+        <div class="row">
+            <aside class="col-lg-4 d-none mt-5 d-lg-block">
+                <nav>
+                    <ul class="list-group">
+                        <li class="list-group-item"><a href="#skills">Skills</a></li>
+                        <li class="list-group-item"><a href="#inspirations">Inspirations</a></li>
+                        <li class="list-group-item"><a href="#places">Places to visit</a></li>
+                    </ul>
+                </nav>
+            </aside>
+            <main class="col-lg-8">
+                <h2 id="abt">About <span>Me</span></h2>
+                <p id="intro">I am currently a <em>third-year</em> student pursuing a degree in <strong>software engineering</strong> at <cite>Addis Ababa Institute of Technology (AAiT)</cite>. Coding is a passion that resonates with me, and I thoroughly enjoy delving into the intricacies of software development. As a dedicated and hardworking student, I consistently strive to give my best in all academic endeavors. If you wish to learn more about me, explore the array of skills I've cultivated, the inspirations that drive my work, and the places I aspire to visit are detailed in the following sections </p>
+                <article>
+                    <h3 class="text-danger" id="skills">Skills</h3>
+                    <p>Throughout the years, I have cultivated a myriad of skills that play a pivotal role in both my daily existence and academic pursuits. Presented below is an inventory of the skills I have nurtured and refined over time.</p>
+                    <ul>
+                        <li>Problem solving</li>
+                        <li>Coding</li>
+                        <li>Socialising</li>
+                        <li>Playing sports</li>
+                        <li>Time management</li>
+                    </ul>
+                    <h3 id="inspirations">Inspirations</h3>
+                    <p>My inspirations are diverse and multifaceted, drawn from various aspects of life and experiences. I find inspiration in the relentless pursuit of knowledge, a trait I admire in both historical figures and contemporary thought leaders. The resilience of individuals who have overcome adversity fuels my motivation, reminding me of the power of determination and courage. Creativity, whether expressed through art, literature, or technological innovation, captivates my imagination and serves as a wellspring of inspiration. Additionally, the supportive communities around me, including family, friends, and mentors, contribute profoundly to my aspirations. Ultimately, my inspirations form a dynamic tapestry, woven with the threads of passion, perseverance, and a continuous quest for personal and intellectual growth.</p>
+                    <h3 id="places">Places to visit</h3>
+                    <p>I want to visit a several places all over the world. So far, I have only visited few places that grabbed my attention. Although there are many places in and out of the country that I'd love to visit. Bale Mountains National Park is the place I'd like to visit the most. The prospect of exploring the pristine landscapes of the Harenna Forest and the expansive Sanetti Plateau is an enticing adventure. Beyond the scenic vistas, the park offers a unique opportunity to witness the endangered Ethiopian wolf in its native environment, adding an element of rarity and ecological significance to the experience. I have summarised list of places I want to visit in the following table.</p>
+                </article>
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr>
+                            <th>Place</th>
+                            <th>Location</th>
+                            <th>Description</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Bale Mountains National Park</td>
+                            <td>Southeastern Ethiopia</td>
+                            <td>Bale Mountains National Park in Ethiopia features stunning landscapes, including the Harenna Forest and Sanetti Plateau. Ideal for trekking and wildlife enthusiasts, it offers a rare chance to witness the endangered Ethiopian wolf in its natural habitat.</td>
+                        </tr>
+                        <tr>
+                            <td>Lalibela Rock-Hewn Churches</td>
+                            <td>Northern Ethiopia</td>
+                            <td>Lalibela is known for its 11 medieval churches carved out of solid rock, each with unique architectural features and religious significance. A UNESCO World Heritage Site.</td>
+                        </tr>
+                        <tr>
+                            <td>Simien Mountains</td>
+                            <td>Northern Ethiopia</td>
+                            <td>A stunning mountain range with deep valleys, high plateaus, and unique wildlife, including the Ethiopian wolf and Walia ibex. Popular for trekking and breathtaking landscapes.</td>
+                        </tr>
+                        <tr>
+                            <td>Halala Kela Resort</td>
+                            <td>Southwestern Ethiopia</td>
+                            <td>Halala Kela is a luxury resort located in the southwestern Ethiopia, near the lake created by the Gilgel Gibe III dam</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <p>here's a short video of the Bale Mountains National Park</p>
+                <video class="rounded w-25 h-auto" src="images/balePark.mp4" controls>Bale National</video>
+            </main>
+        </div>
+    </div>
+        <div class="text-end mb-3">
+            <button onclick="window.location.href='home.html'" class="btn btn-primary">Previous</button>
+            <button onclick="window.location.href='hobbies.html'" class="btn btn-primary mx-5">Next</button>
+        </div>
+        <footer class="footer mt-auto py-3 bg-gradient w-100">
+            <div class="container">
+                <div class="row">
+                    <div class="col text-white text-center">
+                        <nav class="nav justify-content-center">
+                            <a class="nav-link" href="https://x.com/N1sup">Twitter</a>
+                            <a class="nav-link" href="https://linkedin.com/in/naol-gezahegne">LinkedIn</a>
+                            <a class="nav-link" href="mailto:naolgezahegne@gmail.com">Email</a>
+                        </nav>
+                    </div>
+                    <div class="col-12 text-center">
+                        <p>&copy; 2023 Naol. All rights reserved.</p>
+                    </div>
+                </div>
+            </div>
+        </footer>  
 </body>
 </html>
