--- a/src/hobbies.html
+++ b/src/hobbies.html
@@ -4,60 +4,128 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
+<body class="bg-dark text-white">
   <header>
-    <nav>
-        <h2 class="logo">Naol's <span>Portfolio</span></h2>
-        <ul>
-            <li> <a href="home.html" target="_blank">Home</a></li>
-            <li><a href="about.html" target="_blank">About</a></li>
-            <li><a href="hobbies.html" target="_blank">Hobbies</a></li>
-            <li><a href="contact.html" target="_blank">Contact</a></li>
-            <li><a href="cv.html" target="_blank">CV</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Navbar</h5>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link" href="home.html" target="_blank">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="about.html" target="_blank">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="hobbies.html" target="_blank">Hobbies</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contact.html" target="_blank">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cv.html" target="_blank">CV</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </nav>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNav" aria-labelledby="offcanvasNavLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavLabel">Menu</h5>
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link btn btn-outline-light" href="home.html" target="_blank">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link btn btn-outline-light" href="about.html" target="_blank">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link btn btn-outline-light" href="hobbies.html" target="_blank">Hobbies</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link btn btn-outline-light" href="contact.html" target="_blank">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link btn btn-outline-light" href="cv.html" target="_blank">CV</a>
+            </li>
+          </ul>
+        </div>
+      </div>
 </header>
-<div class="hobby">
-  <h2 >My <span>Hobbies</span></h2>
+<div class="container">
+  <div class="row">
+      <aside class="col-lg-4 d-none mt-5 d-lg-block">
+          <nav>
+            <ul class="list-group">
+                <li class="list-group-item"><a href="#movies">Movies</a></li>
+                <li class="list-group-item"><a href="#music">Music</a></li>
+              </ul>
+          </nav>
+      </aside>
+      <main class="col-lg-8">
+        <h2 >My <span class="text-danger">Hobbies</span></h2>
+        <p>During my free time, I engage in various activities. I often find solace in the pages of novels and self-help books, a routine I gravitate towards when not immersed in my studies. Recently, I delved into the captivating narratives of <cite>Atomic Habits</cite> and <cite>To Kill a Mockingbird</cite>, finding them both enriching. My other hobbies are movies and music.</p>
+        <h3 id="movies">Movies</h3>
+        <p>Watching movies is a cherished pastime for me. It serves as a means to divert my mind and provides entertainment that fuels my inspiration for acquiring new knowledge. Notably, films such as <cite>Pursuit of Happyness</cite>, <cite>Good Will Hunting</cite>, and <cite>Coach Carter</cite> hold a special place as my favorites in the cinematic realm. here is my favorite qoute from <cite>pursuit of happyness</cite></p>
+        <blockquote class="blockquote fst-italic text-right"><p>"As long as I kept my mental focus on destinations that were ahead, destinations that I had the audacity to dream might hold a red Ferrari of my own, I protected myself from despair. The future was uncertain, absolutely, and there were many hurdles, twists, and turns to come, but as long as I kept moving forward, one foot in front of the other, the voices of fear and shame, the messages from those who wanted me to believe that I wasn't good enough, would be stilled."</p></blockquote> 
+        <div class="container">
+          <figure>
+            <figcaption>My favorite movies</figcaption>
+            <div class="row">
+              <div class="col-12 col-md-6 col-lg-4">
+                <img class="rounded img-fluid my-2" src="images/mv2.jpg" alt="Pursuit of Happyness">
+              </div>
+              <div class="col-12 col-md-6 col-lg-4">
+                <img class="rounded img-fluid my-2" src="images/mv3.jpg" alt="Coach Carter">
+              </div>
+              <div class="col-12 col-md-6 col-lg-4">
+                <img class="rounded img-fluid my-2" src="images/mv1.jpg" alt="Good Will Hunting">
+              </div>
+            </div>
+          </figure>
+        </div>
+        <h3 id="music">Music</h3>
+        <p>Beyond my enjoyment of movies and books, I also allocate time in my leisure for the pleasure of music. Delving into the soundscape is a cherished activity for me, and among my preferred artists are Bruno Mars, Kanye West, J Cole, and Adele, among others. Each artist brings a unique flavor to my playlist, offering a diverse range of musical experiences. Currently, one particular song has captured my attention, becoming a favorite in the present moment.</p>
+        <audio src="images/Homecoming.mp3" controls muted>
+          Your browser does not support audio 
+        </audio>
+        <div class="text-end mb-3">
+          <button onclick="window.location.href='about.html'" class="btn btn-primary">Previous</button>
+          <button onclick="window.location.href='contact.html'" class="btn btn-primary mx-5">Next</button>
+        </div>
+   </div>
 </div>
-<p>During my free time, I engage in various activities. I often find solace in the pages of novels and self-help books, a routine I gravitate towards when not immersed in my studies. Recently, I delved into the captivating narratives of <cite>Atomic Habits</cite> and <cite>To Kill a Mockingbird</cite>, finding them both enriching. My other hobbies are movies and music.</p>
-    <h3 id="movies">Movies</h3>
-    <p>Watching movies is a cherished pastime for me. It serves as a means to divert my mind and provides entertainment that fuels my inspiration for acquiring new knowledge. Notably, films such as <cite>Pursuit of Happyness</cite>, <cite>Good Will Hunting</cite>, and <cite>Coach Carter</cite> hold a special place as my favorites in the cinematic realm. here is my favorite qoute from <cite>pursuit of happyness</cite></p>
-    <blockquote>"As long as I kept my mental focus on destinations that were ahead, destinations that I had the audacity to dream might hold a red Ferrari of my own, I protected myself from despair. The future was uncertain, absolutely, and there were many hurdles, twists, and turns to come, but as long as I kept moving forward, one foot in front of the other, the voices of fear and shame, the messages from those who wanted me to believe that I wasn't good enough, would be stilled."</blockquote> 
-    
-    <figure>
-      <figcaption>My favorite movies</figcaption>
-      <img src="images/mv2.jpg" alt="pursuit of happyness">
-      <img src="images/mv3.jpg" alt="Coach Carter">
-      <img src="images/mv1.jpg" alt="Good will hunting">
-      
-    </figure>
-    <h3 id="music">Music</h3>
-    <p>Beyond my enjoyment of movies and books, I also allocate time in my leisure for the pleasure of music. Delving into the soundscape is a cherished activity for me, and among my preferred artists are Bruno Mars, Kanye West, J Cole, and Adele, among others. Each artist brings a unique flavor to my playlist, offering a diverse range of musical experiences. Currently, one particular song has captured my attention, becoming a favorite in the present moment.</p>
-    <audio src="images/Homecoming.mp3" controls muted>
-      Your browser does not support the audio tag.
-    </audio>
-    <aside>
-      <nav>
-        <ul>
-          <li><a href="#movies">Movies</a></li>
-          <li><a href="#music">Music</a></li>
-        </ul>
-      </nav>
-    </aside>
-    <button onclick="window.location.href='about.html'">previous</button>
-<button onclick="window.location.href='contact.html'">Next</button>
-<footer>
-    <nav>
-        <ul>
-            <li><a href="https://x.com/N1sup">twitter</a></li>
-            <li><a href="https://linkedin.com/in/naol-gezahegne">linkedin</a></li>
-            <li><a href="mailto:naolgezahegne@gmail.com">email</a></li>
-        </ul>
-    </nav>
-</footer>
-<p>&copy; 2023 Naol. All rights reserved.</p>
+<footer class="footer mt-auto py-3 bg-gradient w-100">
+  <div class="container">
+      <div class="row">
+          <div class="col text-white text-center">
+              <nav class="nav justify-content-center">
+                  <a class="nav-link" href="https://x.com/N1sup">Twitter</a>
+                  <a class="nav-link" href="https://linkedin.com/in/naol-gezahegne">LinkedIn</a>
+                  <a class="nav-link" href="mailto:naolgezahegne@gmail.com">Email</a>
+              </nav>
+          </div>
+          <div class="col-12 text-center">
+              <p>&copy; 2023 Naol. All rights reserved.</p>
+          </div>
+      </div>
+  </div>
+</footer> 
 
 </body>
 </html>
